Fix: updated fetch URLs to deployed backend

--- a/templates/index.html
+++ b/templates/index.html
@@ -96,7 +96,7 @@
   </div>
 
   <script>
-const BASE_URL = "http://127.0.0.1:5500";
+const BASE_URL = "https://hostel-care.onrender.com/";
 
     function showNotification(message, type = "") {
       const notification = document.getElementById("notification");
