--- a/templates/warden.html
+++ b/templates/warden.html
@@ -79,7 +79,7 @@
       async function fetchComplaints() {
         try {
           document.getElementById("loading").style.display = "block";
-          const response = await fetch("http://127.0.0.1:5500/api/complaints", {
+          const response = await fetch("https://hostel-care.onrender.com/api/complaints", {
             method: "GET",
             credentials: "include",
             headers: { "Content-Type": "application/json" },
@@ -176,7 +176,7 @@
            try {
   let res, result;
   res = await fetch(
-    `http://127.0.0.1:5500/api/complaints/${complaintId}`,
+    `https://hostel-care.onrender.com/api/complaints/${complaintId}`,
     {
       method: "PUT",
       credentials: "include",
