Fix: updated fetch URLs to deployed backend

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -236,6 +236,10 @@ imageInput.addEventListener('change', function () {
 });
 
 </script>
+<div id="customAlert" style="display:none;">
+  <div id="customAlertMsg"></div>
+</div>
+
 </body>
 </html>
 
