--- a/templates/index.html
+++ b/templates/index.html
@@ -154,7 +154,7 @@ const BASE_URL = "https://hostel-care.onrender.com/";
       }
 
       try {
-        const res = await fetch(BASE_URL + "/request_otp", {
+        const res = await fetch(BASE_URL + "https://hostel-care.onrender.com/request_otp", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           credentials: "include",
@@ -181,7 +181,7 @@ const BASE_URL = "https://hostel-care.onrender.com/";
       }
 
       try {
-        const verifyRes = await fetch(BASE_URL + "/verify_otp", {
+        const verifyRes = await fetch(BASE_URL + "https://hostel-care.onrender.com/verify_otp", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           credentials: "include",
@@ -211,7 +211,7 @@ const BASE_URL = "https://hostel-care.onrender.com/";
   const role = loginForm.role.value;
 
   try {
-    const res = await fetch(BASE_URL + "/login", {
+    const res = await fetch(BASE_URL + "https://hostel-care.onrender.com/login", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       credentials: "include",
